@@ -787,16 +787,7 @@ sub test($$)
            = &{$formats{$format}}($self, $test_name, $format_type, 
                                   $result, $parser, 
                                   $parser_options, $format_converter_options);
-
-      # TODO: is it really useful to give this warning?
       $converted_errors{$format} = undef if (!@{$converted_errors{$format}});
-      if (defined($converted_errors{$format}) and $format =~ /^file_/) {
-        warn "Warning: errors printed for $format by $test_name\n";
-        foreach my $error_message (@{$converted_errors{$format}}) {
-          warn $error_message->{'error_line'};
-        }
-      }
-      #print STDERR "$format: \n$converted{$format}";
 
       # output converted result and errors in files if $arg_output is set
       if ($arg_output) {
